--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8081
+JWT_SECRET=ma_clef_secrete_super_longue_pour_hs256_123456
+JWT_EXPIRATION=3600000
